--- a/Entregable/app/src/main/res/values/strings.xml
+++ b/Entregable/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Entregable</string>
-    <string name="btnOcult">Ocultar Action Bar</string>
+    <string name="btnHide">Ocultar Action Bar</string>
+    <string name="btnShow">Mostrar Action Bar</string>
     
     
     <string name="listado">Listado Completo</string>
