--- a/Entregable/app/src/main/res/values/strings.xml
+++ b/Entregable/app/src/main/res/values/strings.xml
@@ -21,7 +21,13 @@
     <string name="rbPG">PG</string>
     <string name="rbPG13">PG13</string>
     <string name="rbr4">R</string>
-
+    <string-array name="salas">
+        <item >Sala 1</item>
+        <item >Sala 2</item>
+        <item >Sala 3</item>
+        <item >Sala 4</item>
+        <item >Sala VIP</item>
+    </string-array>
 
     <string name="aceptar">Aceptar</string>
     <string name="cancelar">Cancelar</string>
